--- a/Content/Topics/Assortment Planning/Assortment Rollup Data Paramenters.htm
+++ b/Content/Topics/Assortment Planning/Assortment Rollup Data Paramenters.htm
@@ -16,7 +16,10 @@
                 <p>For example, if a sub-department is selected as the product hierarchy level parameter selection, the assortment roll up displays all aggregated data in this view at the sub-department level, but no lower than that level from a product hierarchical perspective. The data displayed in the view can be aggregated to levels above sub-department dynamically.</p>
             </li>
             <li><span class="Emphasis">Site Hierarchy</span>: The specific levels of the current plan’s site hierarchy to include in the current view.</li>
-            <li><span class="Emphasis">Cluster Sets</span>: The cluster sets to include in the current view. The cluster sets listed include all default and additionally available cluster sets for the product level selected in the Product parameter.<p>While cluster sets are not explicitly part of the site hierarchy they are directly related. Cluster sets in a given assortment plan must be contained within a single lowest level of that hierarchy. Because of this, the <span class="Emphasis">Cluster Sets</span> dropdown populates with the cluster sets contained beneath the selected site hierarchy levels.</p></li>
+            <li>
+                <p><span class="Emphasis">Cluster Sets</span>: The cluster sets to include in the current view. The cluster sets listed include all default and additionally available cluster sets for the product level selected in the Product parameter.</p>
+                <p>While cluster sets are not explicitly part of the site hierarchy they are directly related. Cluster sets in a given assortment plan must be contained within a single lowest level of that hierarchy. Because of this, the <span class="Emphasis">Cluster Sets</span> dropdown populates with the cluster sets contained beneath the selected site hierarchy levels.</p>
+            </li>
             <li>
                 <p><span class="Emphasis">Site Hierarchy Level</span>: Selects the level of the site hierarchy at which to view and analyze the metrics contained in the view. </p>
                 <p>This selection drives the level of the site hierarchy in which the assortment plan data aggregates to.</p>
