--- a/Content/Topics/Campaigns and Events/Applying Equal Size to Selected Objects.htm
+++ b/Content/Topics/Campaigns and Events/Applying Equal Size to Selected Objects.htm
@@ -15,8 +15,8 @@
                 <p>
                     <img src="../../Resources/Images/Events/Equal Size Adjacent Objects.png" class="LargeImages" />
                 </p>
-                <div class="Note_BasicNote">Objects which do not qualify for equal sizing include:
-					<ul><li>objects along a different dimension (vertical or horizontal) than previously selected objects. </li><li>objects that do not span the entire border of a previously selected object. </li></ul></div>
+                <div class="Note_BasicNote">Objects which do not qualify for equal sizing include those:
+					<ul><li>along a different dimension (vertical or horizontal) than previously selected objects. </li><li>that do not span the entire border of a previously selected object. </li></ul></div>
             </li>
             <li>
                 <p>Click <span class="Emphasis">Equal Size</span> to divide the selected containers into equal widths or heights. </p>
