--- a/Content/Topics/Campaigns and Events/Creating Slot Set Templates.htm
+++ b/Content/Topics/Campaigns and Events/Creating Slot Set Templates.htm
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h1>Create a slot set template</h1>
-        <p>In the Slot Set Templates tab, click <span class="Emphasis">New</span> to create a new slot template. </p>
+        <p>In the <span class="Emphasis">Slot Set Templates</span> tab, click <span class="Emphasis">New</span> to create a new slot template. </p>
         <p>
             <img src="../../Resources/Images/Events/New Slot Template.png" class="LargeImages" />
         </p>
@@ -54,7 +54,7 @@
                       Rows 
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                       Select the number of rows to add to the slot set template. This value combined with the Columns value generates a grid of slots in the slot set template. 
+                       Select the number of rows to add to the slot set template. This value combined with the <span class="Emphasis">Columns</span> value generates a grid of slots in the slot set template. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -62,7 +62,7 @@
                        Columns 
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                     Select the number of columns to add to the slot set template. This value combined with the Rows value generates a grid of slots in the slot set template. 
+                     Select the number of columns to add to the slot set template. This value combined with the <span class="Emphasis">Rows</span> value generates a grid of slots in the slot set template. 
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
