--- a/Content/Topics/Campaigns and Events/Item Display Format Properties.htm
+++ b/Content/Topics/Campaigns and Events/Item Display Format Properties.htm
@@ -7,10 +7,10 @@
         <h1>Item display format properties</h1>
         <p>Item Display Format properties appear in the <span class="Emphasis">New Item Display Format</span> and <span class="Emphasis">Edit Item Display Format</span> windows. To open these windows, click <span class="Emphasis">Configuration</span> and navigate to the <span class="Emphasis">Item Display Formats</span> tab.</p>
         <h2>Modifying properties</h2>
-        <p>View and modify the properties of an item display format by selecting a container in the <span class="Emphasis">New Item Display Format</span> or <span class="Emphasis">Edit Item Display Format</span> windows. As Item display formats can include multiple containers, verify the correct one is selected before modifying any fields. </p>
+        <p>View and modify the properties of an item display format by selecting a container in the <span class="Emphasis">New Item Display Format</span> or <span class="Emphasis">Edit Item Display Format</span> windows. As Item display formats can include multiple containers, verify the correct one is selected before modifying any fields. Click,</p>
         <ul>
-            <li>Click <span class="Emphasis">Undo</span> and <span class="Emphasis">Redo</span> on the toolbar as needed to undo or redo any unsaved changes.</li>
-            <li>Click <span class="Emphasis">Save</span> on the toolbar to save any changes made.</li>
+            <li><span class="Emphasis">Undo</span> and <span class="Emphasis">Redo</span> on the toolbar as needed to undo or redo any unsaved changes.</li>
+            <li><span class="Emphasis">Save</span> on the toolbar to save any changes made.</li>
         </ul>
         <h2>Setting the Container Type</h2>
         <p>To add content fields, images, price display formats, or attribute display formats to a container, set the Container Type property to the desired type and choose the specific content fields, image repository, or formats to include in the container. Different content types cannot be mixed (for example, content fields and price display formats) within the same container. </p>
@@ -26,7 +26,9 @@
             </thead>
             <tbody>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1"><p>Attribute Display Format</p></td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">
+                        <p>Attribute Display Format</p>
+                    </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         <ul>
                             <li>An Attribute Format property is added to the properties list. This property contains all defined attribute display formats. </li>
@@ -36,7 +38,9 @@
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1"><p>Content Field</p></td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">
+                        <p>Content Field</p>
+                    </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         <ul>
                             <li>A Field property is added to the properties list. This property contains all content fields. </li>
@@ -47,7 +51,9 @@
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1"><p>Price Display Format</p></td>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1">
+                        <p>Price Display Format</p>
+                    </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
                         <ul>
                             <li>A price value is appended to the container. This is a placeholder to view the size and position of the price in the item display format before it is associated with a promotion. Once the item display format is associated with a promotion, the price display format associated with that promotion is used to display the price.</li>
@@ -56,7 +62,9 @@
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyB-Column1-Body1"><p>Repository Image</p></td>
+                    <td class="TableStyle-standard-BodyB-Column1-Body1">
+                        <p>Repository Image</p>
+                    </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
                         <ul>
                             <li>A Repository Type property is added to the properties list. This property contains all image types: Feature, Inset, Logo, and Product.</li>
