--- a/Content/Topics/Campaigns and Events/List.htm
+++ b/Content/Topics/Campaigns and Events/List.htm
@@ -43,14 +43,14 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Within the <span class="Emphasis">Events</span> grid                    </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Within the field below the label field, begin typing to narrow down the displayed events.                        <p><img src="../../Resources/Images/Events/Filter Events by Campaign Name.png" class="LargeImages" /></p><p>By deselecting the check mark, all events display regardless of which campaign they belong to. Clicking on the <span class="Emphasis">X</span> hides the results.</p></td>
+                        Within the field below the label field, begin typing to narrow down the displayed events.                        <p><img src="../../Resources/Images/Events/Filter Events by Campaign Name.png" class="LargeImages" /></p><p>By deselecting the check mark, all events display regardless of which campaign they belong to. Click the <span class="Emphasis">X</span> to hide the results.</p></td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">
                       Edit Filter
                     </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                        Select the <span class="Emphasis">Edit Filte</span>r button at the bottom right of the <span class="Emphasis">Events</span> grid to open  the <span class="Emphasis">Filter Editor</span> dialog.
+                        Select the <span class="Emphasis">Edit Filter</span> button at the bottom right of the <span class="Emphasis">Events</span> grid to open  the <span class="Emphasis">Filter Editor</span> dialog.
                     </td>
                 </tr>
             </tbody>
