--- a/Content/Topics/Campaigns and Events/Merging Objects.htm
+++ b/Content/Topics/Campaigns and Events/Merging Objects.htm
@@ -44,7 +44,7 @@
             </li>
             <li>
                 <p>Select <span class="Emphasis">Merge Right</span>.</p>
-                <p>The merge removes the content that was in the adjacent object. Only the selected object's contents and properties are preserved.</p>
+                <p>The merge removes the content that was in the right-hand adjacent object. Only the selected object's contents and properties are preserved.</p>
                 <p>
                     <p>
                         <img src="../../Resources/Images/Events/Merge Equal Sized Right.PNG" class="LargeImages" />
@@ -57,11 +57,10 @@
         <ol>
             <li>
                 <p>Select an object that has multiple objects along its entire top, bottom, or side. </p>
-                <p>In this example, the selected object is adjacent to two horizontally-stacked objects that combine to be the same height as the selected object. </p>
                 <p>
                     <img src="../../Resources/Images/Events/Merge Horizontal Objects.png" class="LargeImages" />
                 </p>
-                <p class="BasicNote">The purple line along the selected object's left border indicates that merging in that direction is possible.</p>
+                <p class="BasicNote">The purple line along the selected object's top border indicates that merging in that direction is possible as the selected object is adjacent to two horizontally-stacked objects that combine to be the same height as the selected object.</p>
             </li>
             <li>
                 <p>Select <span class="Emphasis">Merge Up</span>.</p>
