--- a/Content/Topics/Campaigns and Events/Modifying a Slot Set Template.htm
+++ b/Content/Topics/Campaigns and Events/Modifying a Slot Set Template.htm
@@ -1,9 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Modifying a slot set template</h1>
@@ -36,30 +34,26 @@
                     <td class="TableStyle-standard-BodyD-Column2-Body1">The <span class="Emphasis">Active</span> checkbox in the property list indicates whether the slot set template is enabled for use in events. </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <a href="Renumbering Slots.htm">Renumber slots</a>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><a href="Renumbering Slots.htm">Renumber slots</a>
                     </td>
-                    <td class="TableStyle-standard-BodyD-Column2-Body1">Each slot in the slot set template is automatically assigned a number (displayed in the Slot Num property). Clicking the <span class="Emphasis">#</span>button next to the Zoom slider toggles entering or exiting slot renumbering mode. Slots can be renumbered as desired. </td>
+                    <td class="TableStyle-standard-BodyD-Column2-Body1">Each slot in the slot set template is automatically assigned a number (displayed in the Slot Num property). Clicking the <span class="Emphasis">#</span> button next to the Zoom slider toggles entering or exiting slot renumbering mode. Slots can be renumbered as desired. </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyE-Column1-Body1">Save changes</td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">Saves changes made to the slot set template.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <a href="Splitting Objects.htm">Split a slot</a>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><a href="Splitting Objects.htm">Split a slot</a>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">Splits the selected slot into multiple slots. Slots cannot be split into widths or heights smaller than 48 DIUs (about 1/2 inch).</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <a href="Merging Objects.htm">Merge slots</a>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><a href="Merging Objects.htm">Merge slots</a>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">Merges selected slots.</td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
-                    <td class="TableStyle-standard-BodyE-Column1-Body1">
-                        <a href="Applying Equal Size to Selected Objects.htm">Equal size</a>
+                    <td class="TableStyle-standard-BodyE-Column1-Body1"><a href="Applying Equal Size to Selected Objects.htm">Equal size</a>
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">Resizes selected  slots into equal heights or widths across their combined area. Slots must                 be adjacent to each other and aligned vertically or horizontally.                    </td>
                 </tr>
