--- a/Content/Topics/Campaigns and Events/Calendar.htm
+++ b/Content/Topics/Campaigns and Events/Calendar.htm
@@ -1,19 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head>
-        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" />
-        <title>
-        </title>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Event Calendar view</h1>
-        <p>The <span class="Emphasis">Event Calendar</span> view displays a Gantt chart view of all Campaigns and Events. Campaign colors are selected when a Campaign is created, whereas the Event Type dictates Event colors. By double clicking a Campaign, a window will open with the Campaign Header for review or edit. Double clicking an Event, within the Calendar, will open a window with the Event Header for review or edit.</p>
+        <p>The <span class="Emphasis">Event Calendar</span> view displays a Gantt chart view of all campaigns and Events. Campaign colors are selected when a campaign is created, whereas the Event Type dictates Event colors. Double clicking a campaign open a window with the Campaign Header for review or edit. Double clicking an Event, within the calendar, opens a window with the Event Header for review or edit.</p>
         <p>The <span class="Emphasis">Date Display Type</span> dropdown list displays Events by their Ad Dates or their Sale Dates. The Time Scale <span class="Emphasis">+</span> and <span class="Emphasis">–</span> buttons can be used to see Campaigns and Events displayed by time of day, day, week, month, quarter or year. </p>
         <p>
             <img src="../../Resources/Images/Events/Calendar.png" class="LargeImages" />
         </p>
         <h2>Filtering campaigns and events</h2>
-        <p>Which Campaigns display can be adjusted.</p>
+        <p>Which campaigns display can be adjusted.</p>
         <table style="mc-table-style: url('../../Resources/TableStyles/standard.css');" class="TableStyle-standard" cellspacing="0">
             <thead>
                 <tr class="TableStyle-standard-Head-Header1">
@@ -27,7 +25,7 @@
                        Show All
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        Click to toggle between displaying all Campaigns or only Campaigns that are assigned to the Events in the Events Filter.
+                        Click to toggle between displaying all campaigns or only those that are assigned to the Events in the Events Filter.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
@@ -43,24 +41,21 @@
         <p>Right-click in the header and select <span class="Emphasis">Change View To</span> to choose one the following:</p>
         <ul>
             <li>
-                <p>
-                    <span class="Emphasis">Month View</span> – Displays one Campaign and up to three of its Events at a time in a monthly view. The vertical scroll bar changes the month and the horizontal scroll bar changes the Campaign.</p>
+                <p><span class="Emphasis">Month View</span> – Displays one campaign and up to three of its Events at a time in a monthly view. The vertical scroll bar changes the month and the horizontal scroll bar changes the campaign.</p>
                 <p>
                     <img src="../../Resources/Images/Events/Month View.png" class="LargeImages">
                     </img>
                 </p>
             </li>
             <li>
-                <p>
-                    <span class="Emphasis">Gantt View</span> – Default for Event Calendar.</p>
+                <p><span class="Emphasis">Gantt View</span> – Default for Event Calendar.</p>
                 <p>
                     <img src="../../Resources/Images/Events/Gantt View.png" class="LargeImages">
                     </img>
                 </p>
             </li>
             <li>
-                <p>
-                    <span class="Emphasis">Agenda View</span> – Display Campaigns and Events in a daily view</p>
+                <p><span class="Emphasis">Agenda View</span> – Displays a daily view</p>
                 <p>
                     <img src="../../Resources/Images/Events/Agenda View.png" class="LargeImages" />
                 </p>
