--- a/Content/Topics/Campaigns and Events/Cost Types.htm
+++ b/Content/Topics/Campaigns and Events/Cost Types.htm
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head><title></title>
+    <head>
+        <link href="../../Resources/TableStyles/standard.css" rel="stylesheet" MadCap:stylesheetType="table" /><title></title>
     </head>
     <body>
         <h1>Cost types</h1>
-        <p>Costs are associated with Event Types and projected costs can be specified during Event Type configuration. The Cost Types and projected costs are used in the <span class="Emphasis">Budget</span> tab of an Event where the actual costs can be entered. </p>
+        <p>Costs are associated with Event types and projected costs can be specified during Event Type configuration. Cost types and projected costs are used in the <span class="Emphasis">Budget</span> tab of an Event where the actual costs can be entered. </p>
         <p>
             <img src="../../Resources/Images/Events/cost Types.png" class="LargeImages" />
         </p>
@@ -23,30 +24,30 @@
                       Cost Type Name 
                     </td>
                     <td class="TableStyle-standard-BodyD-Column2-Body1">
-                        A descriptive label summarizing the purpose of the Cost Type. This identifies the Cost Type when setting up Event Types or when entering actual costs in the <span class="Emphasis">Budget</span> tab.
+                        A descriptive label summarizing the purpose of the cost type. This identifies the cost type when setting up Event types or when entering actual costs in the <span class="Emphasis">Budget</span> tab.
                     </td>
                 </tr>
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">
                    Description </td>
                     <td class="TableStyle-standard-BodyA-Column2-Body1">
-                       An optional summary of the Cost Type.
+                       An optional summary of the cost type.
                     </td>
                 </tr>
             </tbody>
         </table>
         <h2>Modifying cost types</h2>
-        <p>Updated Cost Type Names are reflected in Events referencing that Cost Type, when the <span class="Emphasis">Budget</span> tab is refreshed or the next time the Event is loaded.</p>
+        <p>Updated cost type names are reflected in Events referencing that cost type, when the <span class="Emphasis">Budget</span> tab is refreshed or the next time the Event is loaded.</p>
         <ol>
-            <li>Select a Cost Type.</li>
+            <li>Select a cost type.</li>
             <li>Click <span class="Emphasis">Edit</span>.</li>
             <li>Make all necessary changes.</li>
             <li>Click <span class="Emphasis">Ok</span>. </li>
         </ol>
         <h2>Deleting cost types</h2>
-        <p> &#160;If the Cost Type has been associated with an Event Type or Event, a message displays to prevent the deletion of the Cost Type.</p>
+        <p> &#160;If the cost type has been associated with an Event type or Event, a message displays to prevent the deletion of the cost type.</p>
         <ol>
-            <li>Select a Cost Type.</li>
+            <li>Select a cost type.</li>
             <li>Click <span class="Emphasis">Delete</span>.</li>
             <li>Click <span class="Emphasis">Yes</span>.</li>
         </ol>
