--- a/Content/Topics/Currency and VAT Management/Currency and VAT Management Overview.htm
+++ b/Content/Topics/Currency and VAT Management/Currency and VAT Management Overview.htm
@@ -1,9 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
     <head><title></title>
     </head>
     <body>
-        <h1>Currency and VAT management Overview</h1>
+        <h1>Currency and VAT anagement Overview</h1>
         <p>Common views facilitate management of currency conversions, VAT rates, and pricing strategies across different areas of the site hierarchy.</p>
         <p>
             <img src="../../Resources/Images/Currency and VAT Management/Currency and VAT Management Overview.png" class="LargeImages" />
