--- a/Content/Topics/Release Notes/System Policies.htm
+++ b/Content/Topics/Release Notes/System Policies.htm
@@ -67,7 +67,7 @@
                 <tr class="TableStyle-standard-Body-Body1">
                     <td class="TableStyle-standard-BodyB-Column1-Body1">Use New Beta Replenishment Engine</td>
                     <td class="TableStyle-standard-BodyB-Column2-Body1">Engine: Replenish</td>
-                    <td class="TableStyle-standard-BodyA-Column1-Body1">Set this to <span class="Emphasis">True</span> to use the 2024 released replenishment engine.</td>
+                    <td class="TableStyle-standard-BodyA-Column1-Body1">Set this to <span class="Emphasis">True</span> to use the 2024 released replenishment engine. The default is <span class="Emphasis">False</span> (run the older replenishment engine).</td>
                 </tr>
             </tbody>
         </table>
