Health Check tab & Target Segment By Update rework

--- a/Content/Topics/Assortment Planning/Target Merging PH Choices AP.htm
+++ b/Content/Topics/Assortment Planning/Target Merging PH Choices AP.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Merging placeholder choices</h1>
+        <h1>Target Choices By Update</h1>
         <MadCap:snippetBlock src="../../Resources/Snippets/Target Merging PH Choices.flsnp" />
     </body>
 </html>
