--- a/Content/Topics/Target Choice Count/Target Merging PH Choices TCC.htm
+++ b/Content/Topics/Target Choice Count/Target Merging PH Choices TCC.htm
@@ -3,7 +3,7 @@
     <head>
     </head>
     <body>
-        <h1>Merging placeholder choices</h1>
+        <h1>Target Choices By Update</h1>
         <MadCap:snippetBlock src="../../Resources/Snippets/Target Merging PH Choices.flsnp" />
     </body>
 </html>
